--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,21 @@
 .navbar.nav-transparent {
+  padding-top: 0px;
+  left: 10%;
   background-color: transparent;
   position: absolute; }
+  .navbar.nav-transparent a {
+    padding-top: 0px; }
+    .navbar.nav-transparent a img {
+      background-color: #FFF;
+      border-radius: 0 0 15px 15px;
+      width: 30%;
+      padding: 15px 30px; }
+
+.diferenciais .coluna-vazia {
+  background-color: #7aa88e; }
+
+.diferenciais .coluna-conteudo {
+  background-color: #e5e5e5; }
 
 .banner {
   background-image: url("../img/rio-1_1920.jpg");
@@ -10,4 +25,7 @@
   padding: 200px 0 0 0; }
   .banner .col {
     background-color: #FFF;
-    border-top: 4px solid #7aa88e; }
+    border-top: 5px solid #7aa88e; }
+
+.hidden {
+  display: none; }
