--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,48 @@
-@import 'main.scss';
+.navbar {
+    &.nav-transparent {
+        padding-top: 0px;
+        left: 10%;
+        background-color: transparent;
+        position: absolute;
+        a{
+            padding-top: 0px;
+            img {
+                background-color: #FFF;
+                border-radius: 0 0 15px 15px;
+                width: 30%;
+                padding: 15px 30px;
+            }
+        }
+    }
+}
 
+.diferenciais {
+    .coluna-vazia{
+        background-color: #7aa88e;
+    }
+    .coluna-conteudo{
+        background-color: #e5e5e5;
+    }
+}
+
+.banner {
+    background-image: url('../img/rio-1_1920.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 200px 0 0 0;
+    .col {
+        background-color: #FFF;
+        border-top: 5px solid #7aa88e;
+    }
+}
+
+.hidden {
+    display: none;
+}
+
+
+///
+// $verde1: #7aa88e;
+// $verde2: #7ba78e;
+// $cinza: #e5e5e5;
